# wafflebot

./: .dockerignore  .env.example  .eslintignore  .eslintrc  .gitignore  .sapphirerc.json  Dockerfile  README.md  alembic.ini  autodeploy.toml  docker-compose.yml  fly.toml  insomnia-workspace.json  main.py  manage.py  nodemon.json  package.json  pyproject.toml  registration.example.json  requirements.txt  tsconfig.json  tsup.config.ts
.github/workflows/: containers.yml  deploy.yml  lint.yml
alembic/: env.py
alembic/versions/: 0050251979c5_remove_email_field_from_user.py  20389e2d036b_add_channel_id_to_ticket.py  2758fed485f5_add_channel_id_to_panel.py  37b2cff7ac8d_remove_unused_column.py  485d2a94f8f4_migrate_settings_to_redis.py  61fead81e7a2_add_created_at_for_ticket.py  6fc84fec082d_add_admin_access.py  7e7d3ab7b310_add_category_setting_key.py  80a9c1f3f0c4_allow_ticket_category_to_be_null.py  85a2851269ca_add_created_at_for_message.py  9046587a9e7e_cascade_delete_foreign_keys.py  9ccd11db28bd_remove_ticketing.py  a1e821917967_add_announcements.py  a2545f11cbf8_switch_to_pure_sqlalchemy.py  b5900a4c68b4_add_canned_responses.py  b8a5fd8b0cdb_add_ticketing_tables.py  cfa69a1a9ff7_index_settings_key.py  d0382cdb5925_add_users_table.py  d7abd9c4a449_add_role_settings.py  dcbd19c929ed_add_panels_and_reactions.py  (+2 more)
api/: __init__.py  main.py
bot/: __init__.py  bot.py  commands.py  converters.py  embeds.py  logger.py  main.py  permissions.py
common/: __init__.py  config.py  constants.py  observability.py
docker-entrypoints/: bot.sh  web.sh
frontend/: .eslintrc.json  .gitignore  .prettierrc  __init__.py  package.json  postcss.config.js  rollup.config.js
prisma/: schema.prisma
scripts/: clear-commands.mjs  commands.mjs
src/: client.ts  healthcheck.ts  index.ts  instrumentation.ts
templates/: listener.ts.sapphire  natslistener.ts.sapphire  slashcommand.ts.sapphire
(+137 files in other folders)
