[tool.poetry]
name = "wafflebot"
version = "0.1.0"
description = "A general purpose Discord bot"
authors = ["Alex Krantz <alex@krantz.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"
Authlib = "^0.15.3"
httpx = "^0.17.0"
databases = {extras = ["sqlite", "postgresql"], version = "^0.4.1"}
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
uvicorn = "^0.13.4"
ujson = "^4.0.2"
websockets = "^8.1"
pydantic = "^1.8.1"
"discord.py" = "^1.6.0"
psycopg2-binary = "^2.8.6"
alembic = "^1.5.6"
python-dotenv = "^0.15.0"
cbor2 = "^5.2.0"
aiofiles = "^0.6.0"
itsdangerous = "^1.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
ipython = "^7.21.0"
black = "^20.8b1"
sqlalchemy-stubs = "^0.4"
"discord.py-stubs" = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
